--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^3.26.11",
+    "axios": "^0.19.2",
     "cjs": "^0.0.11",
     "parse": "^2.11.0",
     "react": "^16.12.0",
